argocd/apps/gitea/dev/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
      nodePort: 32000
